force-app/main/default/objects/ccrz__E_OrderShipmentItem__c/ccrz__E_OrderShipmentItem__c.object-meta.xml
<CustomObject>
    <description>The E_OrderShipmentItem__c object contains detailed shipment line information for a shipment for an order.</description>
    <label>CC Order Shipment Item</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>CC Order Shipment Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Order Shipment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>