force-app/main/default/objects/ccrz__E_OrderShipmentItem__c/fields/ccrz__OrderShipment__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderShipment__c</fullName>
    <description>The order shipment that this detail line refers to.</description>
    <label>CC Order Shipment</label>
    <referenceTo>ccrz__E_OrderShipment__c</referenceTo>
    <relationshipLabel>CC Order Shipment Items</relationshipLabel>
    <relationshipName>E_OrderShipmentItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>