force-app/main/default/objects/ccrz__E_OrderShipmentItem__c/fields/ccrz__OrderShipmentItemId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderShipmentItemId__c</fullName>
    <description>Id for external use.</description>
    <externalId>true</externalId>
    <label>Order Shipment Item Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>