force-app/main/default/objects/ccrz__E_OrderShipmentItem__c/fields/ccrz__SKU__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SKU__c</fullName>
    <description>The SKU of the item shipped for this line.</description>
    <label>SKU</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>